<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="welcome to Sticky Notes"
        android:textColor="@color/Black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/try_freeBtn"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button01"
        android:text="Login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/try_freeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_button02"
        android:text="Try a demo"
        android:textColor="@color/purple_500" />

</RelativeLayout>