...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_toolbar02">

        <!--Image button open profile-->
        <ImageButton
            android:id="@+id/prfileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_person" />
...
                android:textAlignment="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"

                android:background="@drawable/shape_button02"
                android:layout_below="@id/DisplayBtn"
                />
    </LinearLayout>

</RelativeLayout>
