...
                android:text="forgot password?"
                android:textColor="@color/gray02" />


            <!--login Btn-->
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotTv"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="Login"
...
