<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back02" />

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--backbutton-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Profile"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="@drawable/shape_rect01" />

    <!--Shapable image view with round corners for profile -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@color/white"
        android:src="@drawable/ic_person"
        app:shapeAppearance="@style/styleRoundCornersImage" />

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Full Name "
        android:textColor="@color/Black"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/emailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTv"
        android:layout_marginTop="10dp"
        android:text="abc@example.com"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Black"
        android:textSize="12sp"/>

    <LinearLayout
        android:id="@+id/detailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/emailTv"
        android:layout_marginTop="10dp">

        <!--Account-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Account"
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="18dp"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/gray01" />
        </LinearLayout>

        <!--Member Since-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone No."
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="18dp"
                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/gray01" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/details2Ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/detailsLl"
        android:layout_marginTop="10dp">

        <!--SoilType-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Badge"
                android:textColor="@color/Black"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Badge"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext01"
                android:layout_gravity="center"

                android:drawablePadding="10dp"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColor="@color/Black"
                android:textColorHint="@color/gray01" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_below="@id/details2Ll"
        android:background="@color/gray02"/>


    <Button
        android:id="@+id/DisplayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details2Ll"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button01"
        android:text="Display"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/DispAccdetailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/DisplayBtn"
        android:layout_marginTop="25dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text will be updated"
            android:id="@+id/tvAcchangedtext"
            android:textAlignment="center"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/DisplayBtn"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DisPhpdetailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/DispAccdetailsLl"
        android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone no."
            android:textColor="@color/Black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text will be updated"
            android:id="@+id/tvPhchangedtext"

            android:layout_marginLeft="25dp"
            android:layout_below="@id/tvAcchangedtext"
            />

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/DisBaddetailsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/DisPhpdetailsLl"
        android:layout_marginTop="10dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Badge"
            android:textColor="@color/Black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Text will be updated"
            android:id="@+id/tvBadchangedtext"

            android:textAlignment="center"
            android:layout_marginLeft="32dp"
            android:layout_below="@id/tvPhchangedtext"
            />
    </LinearLayout>
    </LinearLayout>





</RelativeLayout>